# clir

./: .gitignore  CNAME  DEVELOPMENT.md  README.md  TODO.md  index.html  pyproject.toml  wheels-list.json
.github/workflows/: deploy-site.yml  publish.yml
assets/: Playground.CS9ffiMt.js  client.DxQkbED4.js  docs.CBromplz.css  hooks.module.BR8w3pc5.js  preact.module.DJMk7arH.js  signals.module.CjpcJ34z.js
clir/: __init__.py  aliases.py  confirm_dialog.py  env.py  errors.py  glob.py  help.py  history.py  hooks.py  keys.py  plugins.py  runtime.py  validation.py  wizard.py
clir/completion/: __init__.py  cli_completer.py
clir/config/: __init__.py
clir/core/: __init__.py  app.py  command.py  context.py  group.py  params.py
clir/output/: __init__.py  markdown.py  panel.py  progress.py  select_table.py  spinner.py  style.py  table.py  tree.py
clir/prompts/: __init__.py  autocomplete.py  base.py  input.py  keys.py  select.py
clir/testing/: __init__.py  mocks.py
clir/utils/: __init__.py  security.py
docs/: index.html
examples/: README.md  advanced_options.py  devtools.py  taskman.py
playground/: index.html
tests/: test_advanced_params.py  test_async.py  test_audit_fixes.py  test_cli.py  test_edge_cases.py  test_errors.py  test_groups.py  test_help.py  test_output.py  test_prompts.py  test_verbosity.py
web/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
web/public/: wheels-list.json
web/scripts/: build-wheel.sh  prerender-docs.mjs
web/src/lib/: ansi.test.ts  (+3 more)
wheels/: clir-0.2.0-py3-none-any.whl
(+52 files in other folders)
